--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- START WELCOME SECTION -->
 
     <section id="welcome-section" class="welcome-section">
-      <h1>Hey I am  09jordy</h1>
+      <h1>Hey I am 09jordy</h1>
       <p>a web developer</p>
     </section>
 
@@ -49,22 +49,22 @@
     <!-- START PROJECTS SECTION -->
 
     <section id="projects" class="projects-section">
-      <h2 class="projects-section-header">These are some of my projects</h2>
+      <h2 class="projects-section-header">Tady jsou moje projekty</h2>
 
       <div class="projects-grid">
         <a
-          href="https://codepen.io/freeCodeCamp/full/zNqgVx"
+          href="https://matejjordan.github.io/prvni/"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute.jpg"
+            src="https://wallpaperaccess.com/full/3909941.png"
             alt="project"
           />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Tribute Page
+            Agent Phoenix 
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
