--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         >
           <img
             class="project-image"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/random-quote-machine.png"
+            src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fnewsinitiative.withgoogle.com%2Fresources%2Ftrainings%2Freverse-image-search-verifying-photos%2F&psig=AOvVaw1IZ3BP1oEdbQRgKlb6JS-6&ust=1762942038971000&source=images&cd=vfe&opi=89978449&ved=0CBUQjRxqFwoTCJjn9ILt6ZADFQAAAAAdAAAAABAW"
             alt="project"
           />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Random Quote Machine
+            Google Search
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
