--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
       </p>
     </footer>
 
+    <footer>
+ 
+  <a href="https://validator.w3.org/check?uri=referer" target="_blank">
+    <img src="https://www.w3.org/Icons/valid-html401-blue.png"
+         alt="Valid HTML 4.01!"
+         width="88"
+         height="31">
+  </a>
+</footer>
+
     <!-- END FOOTER SECTION -->
   <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script></body>
 </html>
