--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       href="https://fonts.googleapis.com/css?family=Raleway:700&display=swap"
       rel="stylesheet"
     />
+    <tittle>09jordy Portfolio</title>
   </head>
   <body>
     <!-- START NAV -->
