--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
           </p>
         </a>
         <a
-          href="https://codepen.io/freeCodeCamp/full/wgGVVX"
+          href="https://matejjordan.github.io/webai/"
           target="_blank"
           class="project project-tile"
         >
           <img
             class="project-image"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/calc.png"
+            src="https://cdn.fastly.steamstatic.com/apps/csgo/images/csgo_react/social/cs2.jpg"
             alt="project"
           />
           <p class="project-title">
             <span class="code">&lt;</span>
-            JavaScript Calculator
+            Web Ai
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
